--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= REST API Level 1 - Eclipse Vert.x Booster
+= Commit from multi-tenant 
 
 IMPORTANT: This booster requires Java 8 or greater and Maven 3.3.x or greater.
 
